[gd_scene load_steps=7 format=3 uid="uid://brnmlbbkec3m4"]

[ext_resource type="Theme" uid="uid://cehdjpevnurkn" path="res://themes/ui_theme.tres" id="1_lc67j"]
[ext_resource type="Script" path="res://scenes/player.gd" id="2_5aen8"]
[ext_resource type="FontFile" uid="uid://c0stqxks8n63p" path="res://fonts/F25_Bank_Printer.ttf" id="3_yj7px"]
[ext_resource type="FontFile" uid="uid://b3crhy7kkibdm" path="res://fonts/F25_Bank_Printer_Bold.ttf" id="4_hswve"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_c4grj"]
bg_color = Color(0.552941, 0.721569, 0.505882, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_js5b0"]
bg_color = Color(0.255172, 0.6, 0.349821, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.352941, 0.352941, 0.352941, 1)
border_blend = true
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_size = 3
shadow_offset = Vector2(2, 2)

[node name="Player" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_lc67j")
script = ExtResource("2_5aen8")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_c4grj")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CashLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_yj7px")
theme_override_font_sizes/font_size = 32
text = "Cash: 999999"

[node name="PlayerLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_yj7px")
theme_override_font_sizes/font_size = 32
text = "Player: Nanonano"

[node name="RoundLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = ExtResource("3_yj7px")
theme_override_font_sizes/font_size = 32
text = "Round: 999"

[node name="PlayerStocksContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 10

[node name="Panel" type="Panel" parent="Panel/VBoxContainer/PlayerStocksContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_js5b0")

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer/PlayerStocksContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="StockRows" type="VBoxContainer" parent="Panel/VBoxContainer/PlayerStocksContainer/Panel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="HFlowContainer" type="VFlowContainer" parent="Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="DoneButton" type="Button" parent="Panel/VBoxContainer/MarginContainer2/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("4_hswve")
theme_override_font_sizes/font_size = 32
text = "End turn"
